<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="#b0b0b0"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="学习类型"
            android:textSize="24sp"
            android:layout_margin="10dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/spn_learning_type"
            android:layout_margin="10dp"
            android:contextClickable="false"
            android:gravity="center_vertical"
            android:layoutMode="opticalBounds"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b0b0b0">
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1">
            <ImageButton
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/color"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:id="@+id/btn_color"
                android:textSize="24sp"/>
            <ImageButton
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/number"
                android:layout_marginLeft="10dp"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:id="@+id/btn_number"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1">
            <ImageButton
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/fruit"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/btn_fruit"
                android:textSize="24sp"
                android:adjustViewBounds="false"/>
            <ImageButton
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/vegetable"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/btn_vegetable"
                android:textSize="24sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1">
            <ImageButton
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/exit"
                android:layout_span="2"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:id="@+id/btn_exit"
                android:textSize="24sp"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
